<resources>
    <string name="app_name">Tugas-Latihan_Kotlin</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="silahkan_login_disini">Silahkan Login Disini</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="implicit">IMPLICIT</string>
    <string name="ini_tampilan_home">Ini Tampilan Home</string>
    <string name="silahkan_registrasi_disini">Silahkan Registrasi Disini</string>
    <string name="kondirmasi_password">Kondirmasi Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="registrasi">Registrasi</string>
    <string name="daftar">Daftar</string>
    <string name="silahkan_registrasi">SILAHKAN REGISTRASI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_fragment_home">Ini Fragment Home</string>
    <string name="welcome_to_home">Welcome To Home</string>
    <string name="fragment">Fragment</string>
    <string name="klik">Klik!</string>
</resources>